# cubeos-service

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yml
src/: app.rs  command.rs  error.rs  last.rs  lib.rs  ping.rs  response.rs  terminal.rs
src/app/: app.rs  app_macro.rs  mod.rs
src/service/: graphql.rs  graphql_macro.rs  ground.rs  ground_macro.rs  gs_auto.rs  gs_auto_macro.rs  gs_schedule.rs  gs_schedule_macro.rs  mod.rs  terminal.rs  terminal_macro.rs  udp.rs  udp_macro.rs  webapp.rs
