[package]
name = "cubeos-service"
version = "0.3.0"
authors = ["Patrick Oppel <patrick.oppel94@gmail.com>"]
edition = "2018"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
log = "^0.4.0"
variant_count = "1.1"

# Pinning this to 0.3.15 due to kubos linux build issues with v0.3.16
pkg-config = "= 0.3.15"

kubos-system = { git = "ssh://git@github.com/Cube-OS/system-api.git"}
bincode = { git = "ssh://git@github.com/Cube-OS/bincode.git"}
rust-udp = { git = "ssh://git@github.com/Cube-OS/rust-udp"}
failure = "0.1.8"

serial = {version = "0.4.0"}
rust-uart = { git = "ssh://git@github.com/Cube-OS/rust-uart"}
# APP activate for nix only
nix = { version = "0.24.1", optional = true}
# Syslog
syslog = { version = "^6.0.1"} 
# Database only activate for Database for now
cubeos-telemetry-db = { git = "ssh://git@github.com/Cube-OS/telemetry-db-api", optional = true}
diesel = { version = "1.0.0", features = ["sqlite"], optional = true}

dialoguer = {version = "0.10.2", optional = true}
strum = {version = "0.24", optional = true}
strum_macros = {version = "0.24", optional = true}
lazy_static = {version = "1.4.0", optional = true}
ground-handle = { git = "ssh://git@github.com/Cube-OS/ground", optional = true}

# features enable conditional compiling,
# features cannot be combined in one compilation
[features]
default = []
ground = ["dep:ground-handle","dep:strum","dep:strum_macros","dep:dialoguer"]
app = ["dep:lazy_static"]
nix = ["dep:nix"]
diesel = ["dep:diesel","dep:cubeos-telemetry-db"]
# all features can be combined with debug
debug = []