[package]
name = "cubeos-service"
version = "0.4.2"
authors = ["Patrick Oppel <patrick.oppel94@gmail.com>"]
edition = "2018"
repository = "https://github.com/Cube-OS/cubeos-service"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
log = "^0.4.0"
variant_count = "1.1"

# Pinning this to 0.3.15 due to kubos linux build issues with v0.3.16
pkg-config = "= 0.3.15"

kubos-system = { version = "0.2.0", registry = "cube-os" }
bincode = { version = "1.3.3", registry = "cube-os" }
udp-rs = { version = "*", registry = "cube-os" }
failure = "0.1.8"

serial = {version = "0.4.0"}
uart-rs = { git = "ssh://git@github.com/Cube-OS/uart-rs"}
# APP activate for nix only
nix = { version = "0.24.1", optional = true}
# Syslog
syslog = { version = "^6.0.1"} 
# Database only activate for Database for now
cubeos-telemetry-db = { version = "0.1.0", registry = "cube-os", optional = true}
diesel = { version = "1.0.0", features = ["sqlite"], optional = true}

dialoguer = {version = "0.10.2", optional = true}
strum = {version = "0.24", optional = true}
strum_macros = {version = "0.24", optional = true}
terminal-macro = { version = "0.1.0", registry = "cube-os", optional = true}

lazy_static = {version = "1.4.0"}
gpio = { version = "0.4"}

# features enable conditional compiling,
# features cannot be combined in one compilation
[features]
default = []
terminal = ['strum', 'strum_macros', 'dialoguer', 'terminal-macro']
# app = ["dep:lazy_static", "gpio"]
nix = ["dep:nix"]
diesel = ["dep:diesel","dep:cubeos-telemetry-db"]
# all features can be combined with debug
debug = []